fix(styles): improve coloring & spacing of index page

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,7 @@
 @theme {
     --color-background: #ffffff;
     --color-foreground: #000000;
+    --color-annotation: #4f4f4f;
 
     --font-default: 'JetBrains Mono', sans-serif;
 }
@@ -10,6 +11,7 @@
 .dark {
     --color-background: #1a1a1a;
     --color-foreground: #f0f0f0;
+    --color-annotation: #aca8a8;
 }
 
 body {
